--- a/Project/Web/serviceApp/templates/platForm.html
+++ b/Project/Web/serviceApp/templates/platForm.html
@@ -19,7 +19,7 @@ Face recognize
 <!-- 广告横幅 -->
 <div class="container-fluid">
     <div class="row">
-        <img class="img-responsive model-img" src="{% static 'img/service.jpg' %}">
+        <img class="img-responsive model-img" src="{% static 'img/services.jpg' %}">
     </div>
 </div>
 <!-- 主体内容 -->
