--- a/Project/Web/contactApp/templates/recruit.html
+++ b/Project/Web/contactApp/templates/recruit.html
@@ -13,7 +13,7 @@ Join us
 <!-- 广告横幅 -->
 <div class="container-fluid">
     <div class="row">
-        <img class="img-responsive model-img" src="{% static 'img/contact.jpg' %}">
+        <img class="img-responsive model-img" src="{% static 'img/contact_us.jpg' %}" width="1920" height="200">
     </div>
 </div>
 <!-- 主体内容 -->
